# TadA-Bench

./: .gitignore  LEADERBOARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: NB1M_ood_FT_Carbon-3B.py  NB1M_ood_FT_Carbon-500M.py  NB1M_ood_FT_Carbon-8B.py  NB1M_ood_MLP_Carbon-3B.py  NB1M_ood_MLP_Carbon-500M.py  NB1M_ood_MLP_Carbon-8B.py  NB1M_ood_MLP_ESM2-35M.py  NB1M_ood_MLP_ESMC-300M.py  NB1M_ood_MLP_NT-50M.py  TadABench_future_round_FT_Carbon-3B.py  TadABench_future_round_FT_Carbon-500M.py  TadABench_future_round_FT_Carbon-8B.py  TadABench_future_round_MLP_Carbon-3B.py  TadABench_future_round_MLP_Carbon-500M.py  TadABench_future_round_MLP_Carbon-8B.py  TadABench_future_round_MLP_ESM2-35M.py  TadABench_future_round_MLP_ESMC-300M.py  TadABench_future_round_MLP_NT-50M.py
config/generated_carbon/: TadABench_future_round_FT_Carbon-3B_seed1.py  TadABench_future_round_FT_Carbon-3B_seed2.py  TadABench_future_round_FT_Carbon-3B_seed3.py  TadABench_future_round_FT_Carbon-500M_seed1.py  TadABench_future_round_FT_Carbon-500M_seed2.py  TadABench_future_round_FT_Carbon-500M_seed3.py  TadABench_future_round_FT_Carbon-8B_seed1.py  (+11 more)
docs/: carbon_experiment_report.md
examples/: example_leaderboard_metadata.json  example_leaderboard_submission.csv
schemas/: leaderboard_submission_schema.json
scripts/: run.py  run_carbon_likelihood.py  run_config_once.py  summarize_carbon_results.py  validate_leaderboard_submission.py
src/: constants.py  util.py
src/backbone/: carbon.py  (+4 more)
tests/: test_config_import.py  test_constants.py  test_metrics.py  test_validator.py
(+27 files in other folders)
