[project]
name = "tadabench-1m"
version = "0.1.0"
description = "Million-scale TadA directed-evolution benchmark for biological language model evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biotite>=1.0.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "esm==3.2.0",
    "hf-xet>=1.1.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
    "transformers<4.48.2",
    "wandb>=0.19.11",
]
